--- a/compose.yaml
+++ b/compose.yaml
@@ -21,7 +21,7 @@ services:
       # - PX4_HOME_ALT=35
       # # GZ world
       # - PX4_GZ_WORLD=default
-
+    network_mode: host
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:ro
       - ./script:/home/user/script:rw
@@ -33,10 +33,10 @@ services:
     # sysctls:
     #   - net.ipv6.conf.all.disable_ipv6=0
     ipc: host
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+      #deploy:
+      #resources:
+      #reservations:
+      #devices:
+      #- driver: nvidia
+      #count: 1
+      #capabilities: [gpu]
